resources/tests/invalid_syntax/scope_begin.ct
//`Expected the beginning of a scope ('{'or ':')!
//1
fn main()->i64: if true